# pw-browser-mcp

./: .gitignore  LICENSE  README.md  pw_mcp_server.py  pyproject.toml  requirements.txt
src/pw_browser_mcp/: __init__.py  __main__.py  server.py
tests/: test_server.py
