[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pw-browser-mcp"
version = "0.1.0"
description = "A Playwright-based browser automation MCP server"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.28,<2",
    "playwright>=1.61.0",
]

[project.scripts]
pw-browser-mcp = "pw_browser_mcp.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pw_browser_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
